48
================

25/01/24 Fix for OpenOffice tags appearing in token content #1422
25/01/24 Fix bug where deposit account could remain hidden in payment book
24/01/24 PetLink: Option to register chips from any manufacturer
24/01/24 Add missing quicklinks for consulting/waiting room
24/01/24 Fix bug with assigning additional fields to reservations
24/01/24 Invalidate payment to trx mappings if [None] is selected either side
24/01/24 Squash null units when writing to animallocation (ASM2 data fix)
23/01/24 Escape raw HTML in query interface results
22/01/24 PetFinder: Option to send a photo for adopted animals
22/01/24 Send 1 photo for F/H/X PetFinder animals, use url cache invalidation
22/01/24 Adopter followup emails: option to restrict species #1417
22/01/24 Use reply address as from when SMTP settings overidden #1418
19/01/24 Use photo url invalidation keys to work around PF bug #1415
18/01/24 Include thead and tbody elements when generating report HTML
17/01/24 Add animallocation table to record history #1408
17/01/24 Accounts screen: button to reconcile all trx for account #1410
15/01/24 Show the onlineform spambot options so they can be disabled
15/01/24 Fix clause for On Shelter (no foster) on query builder
14/01/24 Audit changes to FIV/L/Heartworm triggered by test tab
10/01/24 Add Excel export for reports #1403
10/01/24 Generate QR codes internally instead of using Google #1402
10/01/24 If entry type is disabled for add/edit, guess from other fields #1378
09/01/24 Clear img link parse results between each PDF generation
09/01/24 Remove unsupported "Insert Template" in TinyMCE
09/01/24 Calendar: diary items open correct screen and edit click note #1401
08/01/24 Persist collation IDs and receipt numbers #1397
08/01/24 Key presses in documents/templates should reset inactivity #1399
07/01/24 SavourLife: fix extra whitespace in breed names
07/01/24 Disabling entry type brings back transfer in box #1378