@@ -992,6 +992,8 @@ $(function() {
             if ($("#dateofbirth").val() == $("#datebroughtin").val()) { entrytype = 5; } // born in shelter
             else if ($("#crueltycase").is(":checked")) { entrytype = 7; } // seized
             else if ($("#transferin").is(":checked")) { entrytype = 3; } // transfer in
+            else if (reasonname.indexOf("transfer") != -1) { entrytype = 3; } // transfer in
+            else if (reasonname.indexOf("born") != -1) { entrytype = 5; } // born in shelter
             else if (reasonname.indexOf("stray") != -1) { entrytype = 2; } // stray
             else if (reasonname.indexOf("tnr") != -1) { entrytype = 4; } // tnr
             else if (reasonname.indexOf("wildlife") != -1) { entrytype = 6; } // wildlife
